--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "notes",
-  "homepage": "https://Google-keep-Notes-anand.com",
+  "homepage": "https://AnandSharma916.github.io/Google-keep-Notes-Project",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
